# templates

./: .gitignore  README  README.md  flake.nix
llvm/: a.out  flake.nix
sokol/: flake.nix
sokol/clang/: default.nix
sokol/clang/src/: main.c
sokol/rust/: Cargo.toml  default.nix  flake.nix
sokol/rust/src/: main.rs
store/: .gitignore
store/base/: default.nix
store/c/: build.ninja  flake.nix
store/c-nostd/: .gitignore  README.md  default.nix  linker.ld
store/c-nostd/src/: main.c  stub.S
store/c-opengl/: main.c
store/c-os/: README  default.nix
store/c-websocket-server-gn/: .gitignore  BUILD.gn  bigdef.nix  default.nix  flake.nix
store/c-websocket-server-gn/src/: main.c  websocket.c  websocket.h
store/deno-websoket/: .gitignore  README  default.nix  flake.nix  webview.nix
store/deno-websoket/client/: default.nix  index.html
store/deno-websoket/client/src/: due.ts  index.ts
store/deno-websoket/empty/: tsconfig.json
store/deno-websoket/server/: default.nix
store/deno-websoket/server/src/: main.ts
store/deno-webview/: default.nix  flake.nix  shell.nix
store/deno-webview/npkg/: denop.nix  nmf.ts
store/deno-webview/src/: command.ts  web.ts
store/extended/: default.nix  flake.nix
store/fcft-meson/: default.nix  main.c  meson.build  shm.c  stride.h
store/flutter/: .gitignore  README.md  flake.nix  pubspec.yaml
store/flutter/docs/: README.md
store/flutter/lib/: label.dart  loo.dart  main.dart
store/flutter/linux/: CMakeLists.txt  my_application.cc
store/flutter/test/: widget_test.dart
store/glfw-c/: .gitignore  README  default.nix  meson.build
store/glfw-c/shaders/: fragment.glsl  vertex.glsl
store/glfw-c/src/: due.cpp  main.c  tre.cpp  utils.c  utils.h
store/gn/: default.nix  flake.nix
store/limine-barebones/: .gitignore  build.ninja  default.nix  flake.nix
store/llvm/: flake.nix  helloworld.ll
store/llvm-asm/: flake.nix
store/llvm-asm/src/: main.ll
store/llvm-nostd/src/: main.ll
store/meson/: .gitignore  default.nix  meson.build
store/meson/src/: meson.build  source1.c  source2.c
store/minimal/: description  flake.nix
store/nim/: description
store/nuenv/: flake.nix
store/protobufc/: default.nix  main.c
store/sdl-c/: a.out  default.nix  flake.nix  meson.build
store/sdl-c/src/: doom.c  main.c
store/sqlite3/: README  default.nix  showTable.nu  test.sqlite
store/treejs/: default.nix  package-lock.json
store/web-zig/: .gitignore  build.zig  default.nix
store/web-zig/src/: main.zig
store/web-zig/src/frontend/: index.html  main.wasm
store/web-zig/web/: main.zig
store/webkit-stub/: a.out  default.nix  main.c
store/websocket-protobuf/: README.md  default.nix  flake.nix  wa.sh
store/websocket-protobuf/_build/: main.js
store/websocket-protobuf/_build/api/: api.js
store/websocket-protobuf/_build/client/: client.js  handle.js  ui.js
store/websocket-protobuf/_build/lib/: api.js  config.js  example.js
store/websocket-protobuf/_build/web/: main.js
store/websocket-protobuf/client/: client.ts  default.nix
store/websocket-protobuf/lib/: config.ts  example.ts  package-lock.json  package.json
store/websocket-protobuf/lib/proto/: example.proto
store/websocket-protobuf/server/: main.ts  serveHtml.ts
store/zig-bare/: .gitignore  build.zig  default.nix
store/zig-bare/ll/: build.zig
store/zig-proto/: .gitignore  build.zig  build.zig.zon  default.nix
store/zig-proto/protocol/: all.proto
store/zig-proto/src/: main.zig
store/zig-proto/src/proto/: ok.pb.zig
store/zig-ts-websocket-proto/: build.zig  build.zig.zon  default.nix  flake.nix  genproto  package-lock.json  readme  run
store/zig-ts-websocket-proto/proto/: all.proto
store/zig-ts-websocket-proto/src/: index.html  main.zig
store/zig-ts-websocket-proto/src/proto/: ok.pb.zig
store/zig-ts-websocket-proto/web/: env.json  main.ts
store/zig-ts-websocket-proto/web/proto/: all.ts
